# Spep

./: .gitignore  LICENSE  Spep.cabal  stack.yaml
app/: Main.hs
